# endpoint-audit

./: .env.example  .gitignore  LICENSE  README.md  log_cleanup.py  main.py  pyproject.toml  requirements.txt
agent/: config.py  events.py  integrity.py  local_demo.py  process_watch.py  run.py  shipper.py  spool.py
docs/: local-demo.md  one-command-install.md  windows-run-headless.md
endpoint_audit_demo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
install/: install-agent.ps1  uninstall-agent.ps1
server/: app.py  config.py  storage.py
